--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -DBZ_DEBUG")
 add_subdirectory(imcore)
 add_subdirectory(filters)
 add_subdirectory(cython)
+add_subdirectory(tests)
