New algorithm to upload neighborhoods finished.
- It seems that there is not any difference with respect the the
  previously programmed algorithm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,16 @@
 cmake_minimum_required(VERSION 2.8)
 project(fringeproc)
 
-if(CMAKE_COMPILER_IS_GNUCC)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -fPIC -fmessage-length=0 -O2 -ffast-math")
-endif(CMAKE_COMPILER_IS_GNUCC)
-if(CMAKE_COMPILER_IS_GNUCXX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fmessage-length=0 -O2 -ffast-math")
-endif(CMAKE_COMPILER_IS_GNUCXX)
+#if(CMAKE_COMPILER_IS_GNUCC)
+#  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -fPIC -fmessage-length=0 -O2 -ffast-math")
+#endif(CMAKE_COMPILER_IS_GNUCC)
+#if(CMAKE_COMPILER_IS_GNUCXX)
+#  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fmessage-length=0 -O2 -ffast-math")
+#endif(CMAKE_COMPILER_IS_GNUCXX)
 # Setting verbose mode
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_BUILD_TYPE "Debug")
 
 set(CMAKE_C_FLAGS_RELEASE "-std=gnu99 -O3 -mfpmath=sse -msse3 -ffast-math -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mfpmath=sse -msse3 -ffast-math -funroll-loops")
