--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ find_package(OpenCV REQUIRED)
 add_subdirectory(imcore)
 add_subdirectory(filters)
 add_subdirectory(utils)
+add_subdirectory(tests)
