Nuevo seguidor programado.
- Este seguidor se guia por las frecuencias que se van calculando en el
  momento.
- Es mas rapido y funciona mejor que el seguidor que tengo en imcore.
- Seguidor que sustituires por el antiguo seguidor en versiones futuras.

--- a/tests/gabor_demod/CMakeLists.txt
+++ b/tests/gabor_demod/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(gabor_SRC main.cc
-    gabor_gears.cc)
+    gabor_gears.cc
+    scanner.cc
+)
 set(gabor_LIBS imcore utils ${OpenCV_LIBS})
 
 add_executable(gabor ${gabor_SRC})
