--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ project(fringeproc)
 # Setting verbose mode
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_BUILD_TYPE "Debug")
 
 set(CMAKE_C_FLAGS_RELEASE "-std=gnu99 -O3 -mfpmath=sse -msse2 -ffast-math -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mfpmath=sse -msse2 -ffast-math -funroll-loops")
-set(CMAKE_C_FLAGS_DEBUG "-std=gnu99 -ggdb -DBZ_DEBUG")
-set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -DBZ_DEBUG")
+set(CMAKE_C_FLAGS_DEBUG "-std=gnu99 -ggdb3 -DBZ_DEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -DBZ_DEBUG")
 
 find_package(OpenCV REQUIRED)
 
