Pasando archivos de libreria gabor demod a libreria imcore.
- el programa unwrap usa el Scanner, ya no usa el seguidor.
  Falta terminar bien la trancision. Por lo pronto funciona

--- a/imcore/CMakeLists.txt
+++ b/imcore/CMakeLists.txt
@@ -2,8 +2,11 @@
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 set(imcore_SRCS
-	seguidor.cc
-    )
+  seguidor.cc
+  demodgabor.cc
+  gabor_gears.cc
+  scanner.cc
+  )
 
 add_library(imcore SHARED ${imcore_SRCS})
 target_link_libraries(imcore ${OpenCV_LIBS})
