Configuracion de CMake.
- Se agregaron los archivos de phase unwrapping a la libreria imcore
- Se quitaron los archivos de phase unwraping del programa unwrap
- Se corrigio la directiva #include del archivo main.cc del programa
  unwrap

--- a/imcore/CMakeLists.txt
+++ b/imcore/CMakeLists.txt
@@ -6,6 +6,8 @@ set(imcore_SRCS
   demodgabor.cc
   gabor_gears.cc
   scanner.cc
+  unwrap_gears.c
+  unwrap.cc
   )
 
 add_library(imcore SHARED ${imcore_SRCS})
