Corrigiendo configuracion de CMake.
- Se cambiaron las librarias dinamicas a estaticas para crear
  los modulos de python y cargarlos en python sin necesidad
  de agregar las librarias dinamicas an LD_LIBRARY_PATH

--- a/imcore/CMakeLists.txt
+++ b/imcore/CMakeLists.txt
@@ -10,7 +10,7 @@ set(imcore_SRCS
   unwrap.cc
   )
 
-add_library(imcore SHARED ${imcore_SRCS})
+add_library(imcore STATIC ${imcore_SRCS})
 target_link_libraries(imcore ${OpenCV_LIBS})
 
 
