--- a/python/imcore/CMakeLists.txt
+++ b/python/imcore/CMakeLists.txt
@@ -3,10 +3,12 @@ include_directories(${PYTHON_INCLUDE_PATH})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(CMAKE_SWIG_FLAGS "")
-set(gabor_SWIG fringeproc.i
+set(fringeproc_SWIG fringeproc.i
 )
 
-SET_SOURCE_FILES_PROPERTIES(${gabor_SWIG} PROPERTIES CPLUSPLUS ON)
-SET_SOURCE_FILES_PROPERTIES(${gabor_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(fringeproc python ${gabor_SWIG} ${gabor_SRC})
-SWIG_LINK_LIBRARIES(fringeproc ${PYTHON_LIBRARIES} ${gabor_LIBS})
+SET(fringeproc_LIBS imcore utils ${PYTHON_LIBRARIES})
+
+SET_SOURCE_FILES_PROPERTIES(${fringeproc_SWIG} PROPERTIES CPLUSPLUS ON)
+SET_SOURCE_FILES_PROPERTIES(${fringeproc_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
+SWIG_ADD_MODULE(fringeproc python ${fringeproc_SWIG} ${fringeproc_SRC})
+SWIG_LINK_LIBRARIES(fringeproc  ${fringeproc_LIBS})
