Configuracion para encontrar instalacion de numpy y cabeceras.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(fringeproc)
 
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99 -O2 -mfpmath=sse -msse2 -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -mfpmath=sse -msse2 -funroll-loops")
@@ -11,7 +13,8 @@ set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -ggdb3 -DBZ_DEBUG")
 # Look for required libraries and tools
 find_package(OpenCV REQUIRED)
 find_package(SWIG REQUIRED)
-find_package(PythonLibs)
+find_package(PythonLibs REQUIRED)
+find_package(NumPy REQUIRED)
 include(${SWIG_USE_FILE})
 
 add_subdirectory(imcore)
