Parseando argumentos con program_options.
Se agrego la dependencia de la libreria Boost para usar program_options.

- Se parsean los argumentos usando opciones.
- Se agrega mensajes de ayuda

--- a/tests/unwrap/CMakeLists.txt
+++ b/tests/unwrap/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(unwrap_SRC main.cc
     )
-set(unwrap_LIBS imcore utils ${OpenCV_LIBS})
+set(unwrap_LIBS imcore utils ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
 add_executable(unwrap ${unwrap_SRC})
 target_link_libraries(unwrap ${unwrap_LIBS})
