--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${CMAKE_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
-
+include_directories(${CMAKE_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS}
+                    ${Boost_INCLUDE_DIRS})
 add_subdirectory(unwrap)
 add_subdirectory(gabor_demod)
