Adding configuration for distributing python files

--- a/python/imcore/CMakeLists.txt
+++ b/python/imcore/CMakeLists.txt
@@ -13,3 +13,8 @@ SET_SOURCE_FILES_PROPERTIES(${fringeproc_SWIG} PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(${fringeproc_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
 SWIG_ADD_MODULE(fringeproc python ${fringeproc_SWIG} ${fringeproc_SRC})
 SWIG_LINK_LIBRARIES(fringeproc  ${fringeproc_LIBS})
+
+# Copying python files to binary dir
+add_custom_target(python_imcore ALL
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py ${CMAKE_CURRENT_BINARY_DIR}
+)
