Programando trancicion a Eigen3 y CImg de phase unwrapping.
- Actualmente debugueando, no funciona como se espera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(fringeproc)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99 -O2  -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -funroll-loops")
-set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -ggdb3 -DBZ_DEBUG")
-set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -ggdb3 -DBZ_DEBUG")
+set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -g -DBZ_DEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -g -DBZ_DEBUG")
 
 add_subdirectory(imcore)
 add_subdirectory(utils)
