--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(fringeproc)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99 -O2  -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -funroll-loops")
 set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -g -DBZ_DEBUG")
