--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,11 @@ project(fringeproc)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99 -O2  -funroll-loops")
-set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -funroll-loops")
-set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -g -DBZ_DEBUG")
-set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -g -DBZ_DEBUG")
+set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99  -funroll-loops -O3")
+set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -funroll-loops -O3")
+set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -g")
+set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -g")
 
 add_subdirectory(imcore)
 add_subdirectory(utils)
 add_subdirectory(tests)
-#add_subdirectory(python)
