--- a/tests/unwrap/CMakeLists.txt
+++ b/tests/unwrap/CMakeLists.txt
@@ -8,7 +8,7 @@ endif(UNIX)
 include_directories(${X11_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/include)
 
-set(unwrap_SRC main.cc
+set(unwrap_SRC main.cc c_unwrap.cc
     )
 set(unwrap_LIBS imcore utils)
 
