--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(fringeproc)
 
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_C_FLAGS_RELEASE "-fPIC -std=gnu99 -O2 -mfpmath=sse -msse2 -funroll-loops")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -mfpmath=sse -msse2 -funroll-loops")
 set(CMAKE_C_FLAGS_DEBUG "-fPIC -std=gnu99 -ggdb3 -DBZ_DEBUG")
