Properties to compile correctly added
- Current version of OpenCV does not work with standard 11 of c++
  so we instruct cmake to use standard 98 using properties
- Updated use of variables that sets the python include paths

--- a/imcore/CMakeLists.txt
+++ b/imcore/CMakeLists.txt
@@ -7,5 +7,7 @@ set(imcore_SRCS
 
 add_library(imcore SHARED ${imcore_SRCS})
 target_link_libraries(imcore ${OpenCV_LIBS})
+target_compile_features(imcore PRIVATE c_restrict)
 
-
+# Current version OpenCV does not compiles with standard 11
+set_property(TARGET imcore PROPERTY CXX_STANDARD 98)
