--- a/tests/gabor_demod/CMakeLists.txt
+++ b/tests/gabor_demod/CMakeLists.txt
@@ -1,6 +1,6 @@
-include_directories(${PYTHON_INCLUDE_PATH})
+include_directories(${PYTHON_INCLUDE_DIRS})
+include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 
 set(gabor_SRC main.cc
     gabor_gears.cc
@@ -11,6 +11,8 @@ set(gabor_LIBS imcore utils ${OpenCV_LIBS})
 
 add_executable(gabor ${gabor_SRC})
 target_link_libraries(gabor ${gabor_LIBS})
+# Current version OpenCV does not compiles with standard 11
+set_property(TARGET gabor PROPERTY CXX_STANDARD 98)
 
 # Python modules
 SET(CMAKE_SWIG_FLAGS "")
@@ -21,3 +23,5 @@ SET_SOURCE_FILES_PROPERTIES(${gabor_SWIG} PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(${gabor_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
 SWIG_ADD_MODULE(gabor python ${gabor_SWIG} ${gabor_SRC})
 SWIG_LINK_LIBRARIES(gabor ${PYTHON_LIBRARIES} ${gabor_LIBS})
+# Current version OpenCV does not compiles with standard 11
+set_property(TARGET _gabor PROPERTY CXX_STANDARD 98)
