--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ include_directories(${CMAKE_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
 
 add_subdirectory(unwrap)
 add_subdirectory(gabor_demod)
+add_subdirectory(opencv_tests)
